added response structs
